--- a/genericusers/templates/login.html
+++ b/genericusers/templates/login.html
@@ -1,13 +1,10 @@
 <form method='post'>
     {% csrf_token %}
-    <input type='text' name='username' placeholder='Usuario'>
+    <input type='text' name='username' placeholder='Usuario' value='{{ form_data.get('username') }}'>
     <br>
-    <input type='password' name='password' placeholder='Clave'>
+    <input type='password' name='password' placeholder='Clave' value='{{ form_data.get('password') }}'>
     <br>
     <input type='submit' value='Ingresar ahora'>
     <br>
     {{ error }}
 </form>
-{% for k, v in form_data.items %}
-    <p>{{ k }} -> {{ v }}</p> 
-{% endfor %}
