--- a/genericusers/templates/login.html
+++ b/genericusers/templates/login.html
@@ -1,10 +1,10 @@
 <form method='post'>
     {% csrf_token %}
-    <input type='text' name='username' placeholder='Usuario' value='{{ form_data.get('username') }}'>
+    <input type='text' name='username' placeholder='Usuario' value='{{ username }}'>
     <br>
-    <input type='password' name='password' placeholder='Clave' value='{{ form_data.get('password') }}'>
+    <input type='password' name='password' placeholder='Clave' value='{{ password }}'>
     <br>
     <input type='submit' value='Ingresar ahora'>
     <br>
-    {{ error }}
+    <p>{{ error }}</p>
 </form>
