add signup template

--- a/genericusers/templates/signup.html
+++ b/genericusers/templates/signup.html
@@ -1,10 +1,10 @@
 <form method='post'>
     {% csrf_token %}
-    <input type='text' name='username' placeholder='Usuario'>
+    <input type='text' name='username' placeholder='Usuario' value={{ username }}>
     <br>
-    <input type='password' name='password' placeholder='Clave'>
+    <input type='password' name='password' placeholder='Clave' value=''>
     <br>
-    <input type='password' name='repeat_password' placeholder='Repite clave'>
+    <input type='password' name='repeat_password' placeholder='Repite clave' value=''>
     <br>
     <input type='submit' value='Registrar ahora'>
     <br>
