--- a/genericusers/templates/login.html
+++ b/genericusers/templates/login.html
@@ -1,10 +1,18 @@
-<form method='post'>
-    {% csrf_token %}
-    <input type='text' name='username' placeholder='Usuario' value='{{ username }}'>
-    <br>
-    <input type='password' name='password' placeholder='Clave' value='{{ password }}'>
-    <br>
-    <input type='submit' value='Ingresar ahora'>
-    <br>
-    <p>{{ error }}</p>
-</form>
+{% extends "base.html" %}
+
+{% block content %}
+
+    <div id='login_login'>
+        <form method='post'>
+            {% csrf_token %}
+            <input type='text' name='username' placeholder='Usuario' value='{{ username }}'>
+            <br>
+            <input type='password' name='password' placeholder='Clave' value='{{ password }}'>
+            <br>
+            <input type='submit' value='Ingresar ahora!'>
+            <br>
+            <p>{{ error }}</p>
+        </form>
+    </div>
+
+{% endblock %}
