give only name to logout.html template

--- a/genericusers/templates/logout.html
+++ b/genericusers/templates/logout.html
@@ -4,7 +4,7 @@
 
     <div id='goodbye_logout'>
         <h1>
-            Adios{{ username }}, esperamos vuelvas pronto!
+            Adios{{ name }}, esperamos vuelvas pronto!
         </h1>
         <h2>
             Por cierto, ten un dia increible :D !!!
