add go home button

--- a/genericusers/templates/login.html
+++ b/genericusers/templates/login.html
@@ -14,5 +14,11 @@
             <p>{{ error }}</p>
         </form>
     </div>
+    <div id='redirect_logout'>
+        <h3>
+            Si lo deseas, vuelve al inicio haciendo
+            <a href='/users/home'>click aqui!</a>
+        </h3>
+    </div>
 
 {% endblock %}
