--- a/genericusers/templates/signup.html
+++ b/genericusers/templates/signup.html
@@ -22,5 +22,11 @@
             {{ error }}
         </form>
     </div>
+    <div id='redirect_logout'>
+        <h3>
+            Si lo deseas, vuelve al inicio haciendo
+            <a href='/users/home'>click aqui!</a>
+        </h3>
+    </div>
 
 {% endblock %}
