add username to welcome message

--- a/genericusers/templates/active_home.html
+++ b/genericusers/templates/active_home.html
@@ -4,7 +4,7 @@
 
     <div id='welcome_user_home'>
         <h1>
-            Bienvenido {{ user.login }}, es bueno verte por aqui!
+            Bienvenido/a {{ username }}, es bueno verte por aqui!
         </h1>
     </div>
     <div id='options_user_home'>
@@ -14,12 +14,15 @@
         <a href='/solicitudes/new_solicitude/'>
             Crea una nueva solicitud!
         </a>
+        <br>
         <a href='/solicitudes/active_solicitudes/'>
             Mira todas tus solicitudes!
         </a>
+        <br>
         <a href='/swaptransactions/active_transactions/'>
             Mira todas tus transacciones!
         </a>
+        <br>
         <a href='/users/logout/'>
             Cierra tu sesion!
         </a>
