--- a/genericusers/templates/passive_home.html
+++ b/genericusers/templates/passive_home.html
@@ -4,7 +4,7 @@
 
     <div id='welcome_user_home'>
         <h1>
-            Bienvenido {{ user.login }}, es bueno verte por aqui!
+            Bienvenido/a {{ username }}, es bueno verte por aqui!
         </h1>
     </div>
     <div id='options_user_home'>
@@ -14,9 +14,11 @@
         <a href='/solicitudes/passive_pending_solicitudes/'>
             Mira las solicitudes pendientes de tus activos!
         </a>
+        <br>
         <a href='/solicitudes/passive_solicitudes/'>
             Mira ofertas disponibles para las solicitudes de tus activos!
         </a>
+        <br>
         <a href='/users/logout/'>
             Cierra tu sesion!
         </a>
