--- a/genericusers/templates/active_home.html
+++ b/genericusers/templates/active_home.html
@@ -23,6 +23,14 @@
             Mira todas tus transacciones!
         </a>
         <br>
+        <a href='/vals/search/'>
+            Consulta los valores existentes en Swap!
+        </a>
+        <br>
+        <a href='/users/search/'>
+            Consulta operaciones de otros usuarios en Swap!
+        </a>
+        <br>
         <a href='/users/logout/'>
             Cierra tu sesion!
         </a>
