--- a/genericusers/templates/home.html
+++ b/genericusers/templates/home.html
@@ -19,7 +19,7 @@
         <h2>
             Si eres nuevo, que esperas, registrate ahora haciendo click aqui...
         </h2>
-        <a href='/users/signup'>
+        <a href='/users/signup/'>
             Registrate ahora!
         </a>
     </div>
