--- a/genericusers/templates/logout.html
+++ b/genericusers/templates/logout.html
@@ -13,7 +13,7 @@
     <div id='redirect_logout'>
         <h3>
             Si lo deseas, vuelve al inicio haciendo
-            <a href='/users/home'>click aqui!</a>
+            <a href='/users/home/'>click aqui!</a>
         </h3>
     </div>
 
