--- a/genericusers/templates/passive_home.html
+++ b/genericusers/templates/passive_home.html
@@ -19,6 +19,14 @@
             Mira ofertas disponibles para las solicitudes de tus activos!
         </a>
         <br>
+        <a href='/vals/search/'>
+            Consulta los valores existentes en Swap!
+        </a>
+        <br>
+        <a href='/users/search/'>
+            Consulta operaciones de otros usuarios en Swap!
+        </a>
+        <br>
         <a href='/users/logout/'>
             Cierra tu sesion!
         </a>
