--- a/solicitudes/templates/new_solicitude.html
+++ b/solicitudes/templates/new_solicitude.html
@@ -14,13 +14,14 @@
             <br>
             <input type='text' name='val' placeholder='ID Valor' value='{{ val }}'>
             <br>
-            <input type='text' name='quantity' value='{{ quantity }}'>
+            <input type='text' name='quantity' placeholder='Cantidad' value='{{ quantity }}'>
             <br>
             <label for='1'>Pesos</label>
             <input type='radio' name='quantity_type' value='1' checked='checked'>
             <br>
             <label for='2'>Unidades</label>
             <input type='radio' name='quantity_type' value='2'>
+            <br>
             <input type='submit' value='Crear solicitud!'>
             <p>{{ message }}</p>
         </form>
