--- a/solicitudes/templates/passive_pending_solicitudes.html
+++ b/solicitudes/templates/passive_pending_solicitudes.html
@@ -2,10 +2,12 @@
 
 {% block content %}
 
-    <div id='all_active_solicitudes'>
+    <div id='all_pending_passive_solicitudes'>
+        <form method='post'>
         {% for s in solicitudes %}
             <p>
                 Solicitud con PK_ID #: {{ s.pk_id }}
+                <input type='checkbox' name='to_aprove' value='{{ s.pk_id }}'>
             </p>
             <p>
                 Tipo de operacion: {{ s.operation_type }}
@@ -19,11 +21,9 @@
             <p>
                 Creado: {{ s.time_created }}
             </p>
-            <p>
-                Esta activada: {{ s.is_active }}
-            </p>
         {% endfor %}
         <p>{{ message }}</p>
+        </form>
     </div>
     <div id='redirect_logout'>
         <h3>
