--- a/genericusers/templates/signup.html
+++ b/genericusers/templates/signup.html
@@ -3,6 +3,7 @@
 {% block content %}
 
     <div id='signup_signup'>
+        <h2>Registrar usuario</h2>
         <form method='post'>
             {% csrf_token %}
             <input type='text' name='username' placeholder='Usuario' value={{ username }}>
@@ -13,7 +14,7 @@
             <br>
             <label for='1'>Activo</label>
             <input type='radio' name='user_type' value='1' checked='checked'>
-            <br>
+            <label>|</label>
             <label for='2'>Intermediario</label>
             <input type='radio' name='user_type' value='2'> 
             <br>
