--- a/solicitudes/templates/active_solicitudes.html
+++ b/solicitudes/templates/active_solicitudes.html
@@ -3,6 +3,7 @@
 {% block content %}
 
     <div id='all_active_solicitudes'>
+        <h2>Tus solicitudes</h2>
         {% for s in solicitudes %}
             <p>
                 Solicitud con PK_ID #: {{ s.pk_id }}
