--- a/genericusers/templates/login.html
+++ b/genericusers/templates/login.html
@@ -6,10 +6,14 @@
         <h2>Iniciar sesion</h2>
         <form method='post'>
             {% csrf_token %}
-            <input type='text' name='username' placeholder='Usuario' value='{{ username }}'>
+            <label for='username'>Usuario</label>
             <br>
-            <input type='password' name='password' placeholder='Clave' value='{{ password }}'>
+            <input type='text' name='username' value='{{ username }}'>
             <br>
+            <label for='password'>Clave</label>
+            <br>
+            <input type='password' name='password' value='{{ password }}'>
+            <br><br>
             <input type='submit' value='Ingresar ahora!'>
             <br>
             <p>{{ error }}</p>
