--- a/genericusers/templates/signup.html
+++ b/genericusers/templates/signup.html
@@ -6,18 +6,25 @@
         <h2>Registrar usuario</h2>
         <form method='post'>
             {% csrf_token %}
-            <input type='text' name='username' placeholder='Usuario' value={{ username }}>
+            <label for='username'>Usuario</label>
             <br>
-            <input type='password' name='password' placeholder='Clave' value=''>
+            <input type='text' name='username' value={{ username }}>
             <br>
-            <input type='password' name='repeat_password' placeholder='Repite clave' value=''>
+            <label for='password'>Clave</label>
             <br>
-            <label for='1'>Activo</label>
-            <input type='radio' name='user_type' value='1' checked='checked'>
-            <label>|</label>
-            <label for='2'>Intermediario</label>
-            <input type='radio' name='user_type' value='2'> 
+            <input type='password' name='password' value=''>
             <br>
+            <label for='repeat_password'>Repetir clave</label>
+            <br>
+            <input type='password' name='repeat_password' value=''>
+            <br>
+            <label for='user_type'>Tipo de usuario</label>
+            <br>
+            <select name='quantity_type'>
+                <option value='1'>Activo</option>
+                <option value='2'>Intermediario</option>
+            </select>
+            <br><br>
             <input type='submit' value='Registrate ahora!'>
             <br>
             {{ error }}
