--- a/solicitudes/templates/active_solicitudes.html
+++ b/solicitudes/templates/active_solicitudes.html
@@ -12,10 +12,10 @@
                 Tipo de operacion: {{ s.operation_type }}
             </p>
             <p>
-                Valor: {{ s.val.name }}
+                Valor: {{ s.val.name }}, {{ s.val.offerant }}
             </p>
             <p>
-                Cantidad({{ s.quantity_type }}): {{ s.quantity }}
+                Cantidad: {{ s.quantity }} {{ s.quantity_type }}
             </p>
             <p>
                 Creado: {{ s.time_created }}
