--- a/solicitudes/templates/new_solicitude.html
+++ b/solicitudes/templates/new_solicitude.html
@@ -13,7 +13,7 @@
                 <option value='2'>Vender</option>
             </select>
             <br>
-            <label for='val'>ID Valor</label>
+            <label for='val'>Valor</label>
             <br>
             <select name='val'>
                 <option value='-1'>Ninguno</option>
