--- a/genericusers/templates/home.html
+++ b/genericusers/templates/home.html
@@ -11,13 +11,15 @@
 
     <div id='welcome_home'>
         <h1>
-            Bienvenido a Swap, la bolsa de valores mas increible del mundo!
+            Bienvenido a Swap!<br>
+            La bolsa de valores mas increible del mundo!
         </h1>
     </div>
     <div id='login_home'>
         <h2>
             Si ya estas registrado, ingresa ahora haciendo click aqui...
         </h2>
+        <br>
         <a href='/users/login/'>
             Ingresar ahora!
         </a>
@@ -26,6 +28,7 @@
         <h2>
             Si eres nuevo, que esperas, registrate ahora haciendo click aqui...
         </h2>
+        <br>
         <a href='/users/signup/'>
             Registrate ahora!
         </a>
