--- a/genericusers/static/genericusers/home.css
+++ b/genericusers/static/genericusers/home.css
@@ -1,3 +1,41 @@
-h1 {
-    color: red;
+body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Open Sans', sans-serif;
+}
+
+#welcome_home {
+    width: 100%;
+    float: left;
+    background: tomato;
+    color: white;
+    padding: 8% 0;
+    text-align: center;
+    text-shadow: 2px 2px 10px #990000;
+    box-shadow: 2px 2px 10px #990000;
+    font-size: 1.3em;
+}
+
+#login_home {
+    width: 46%;
+    float: left;
+    padding: 0 1%;
+    text-align: center;
+    margin-right: 1%;
+}
+
+#signup_home {
+    width: 46%;
+    float: left;
+    padding: 0 1%;
+    text-align: center;
+    margin-left: 1%;
+}
+
+a {
+    font-size: 1.2em;
+    text-decoration: none;
+    padding: 20px 30px;
+    border: 2px solid #000;
+    border-radius: 5px;
 }
