--- a/genericusers/templates/base.html
+++ b/genericusers/templates/base.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <title>Swap</title>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
     {% block head %}{% endblock %}
 </head>
 
