--- a/genericusers/static/genericusers/home.css
+++ b/genericusers/static/genericusers/home.css
@@ -7,34 +7,39 @@ body {
 #welcome_home {
     width: 100%;
     float: left;
-    background: tomato;
+    background: #2B9464;
     color: white;
     padding: 8% 0;
     text-align: center;
-    text-shadow: 2px 2px 10px #990000;
-    box-shadow: 2px 2px 10px #990000;
+    text-shadow: 2px 2px 10px #2B9464;
+    box-shadow: 2px 2px 10px #2B9464;
     font-size: 1.3em;
 }
 
 #login_home {
-    width: 46%;
+    width: 48%;
     float: left;
-    padding: 0 1%;
+    background: #F5DF65;
+    color: white;
+    padding: 10% 1%;
     text-align: center;
-    margin-right: 1%;
+    text-shadow: 2px 2px 10px #F5DF65;
 }
 
 #signup_home {
-    width: 46%;
+    width: 48%;
     float: left;
-    padding: 0 1%;
+    background: #F5DF65;
+    color: white;
+    padding: 10% 1%;
     text-align: center;
-    margin-left: 1%;
+    text-shadow: 2px 2px 10px #F5DF65;
 }
 
-a {
+a, a: {
     font-size: 1.2em;
     text-decoration: none;
+    background: white;
     padding: 20px 30px;
     border: 2px solid #000;
     border-radius: 5px;
