--- a/genericusers/templates/passive_home.html
+++ b/genericusers/templates/passive_home.html
@@ -1,5 +1,12 @@
 {% extends "base.html" %}
 
+{% block head %}
+
+    {% load staticfiles %}
+    <link rel="stylesheet" type="text/css" href="{% static "genericusers/passive_home.css" %}">
+
+{% endblock %}
+
 {% block content %}
 
     <div id='welcome_user_home'>
@@ -11,22 +18,23 @@
         <h2>
             Que te gustaria hacer?
         </h2>
+        <br>
         <a href='/solicitudes/passive_pending_solicitudes/'>
             Mira las solicitudes pendientes de tus activos!
         </a>
-        <br>
+        <br><br>
         <a href='/solicitudes/passive_solicitudes/'>
             Mira ofertas disponibles para las solicitudes de tus activos!
         </a>
-        <br>
+        <br><br>
         <a href='/vals/search/'>
             Consulta los valores existentes en Swap!
         </a>
-        <br>
+        <br><br>
         <a href='/users/search/'>
             Consulta operaciones de otros usuarios en Swap!
         </a>
-        <br>
+        <br><br>
         <a href='/users/logout/'>
             Cierra tu sesion!
         </a>
