--- a/genericusers/static/genericusers/home.css
+++ b/genericusers/static/genericusers/home.css
@@ -7,40 +7,54 @@ body {
 #welcome_home {
     width: 100%;
     float: left;
-    background: #2B9464;
+    background: #69ACA5;
     color: white;
     padding: 8% 0;
     text-align: center;
-    text-shadow: 2px 2px 10px #2B9464;
-    box-shadow: 2px 2px 10px #2B9464;
+    text-shadow: 2px 2px 10px #69ACA5;
+    box-shadow: 2px 2px 10px #69ACA5;
     font-size: 1.3em;
 }
 
 #login_home {
     width: 48%;
     float: left;
-    background: #F5DF65;
+    background: #444444;
     color: white;
-    padding: 10% 1%;
+    padding: 3% 1% 10% 1%;
     text-align: center;
-    text-shadow: 2px 2px 10px #F5DF65;
+    text-shadow: 2px 2px 10px #444444;
+}
+
+#login_home h2 {
+    margin-bottom: 7%;
 }
 
 #signup_home {
     width: 48%;
     float: left;
-    background: #F5DF65;
+    background: #444444;
     color: white;
-    padding: 10% 1%;
+    padding: 3% 1% 10% 1%;
     text-align: center;
-    text-shadow: 2px 2px 10px #F5DF65;
+    text-shadow: 2px 2px 10px #444444;
 }
 
-a, a: {
+#signup_home h2 {
+    margin-bottom: 7%;
+}
+
+a {
     font-size: 1.2em;
     text-decoration: none;
-    background: white;
-    padding: 20px 30px;
-    border: 2px solid #000;
+    background: #69ACA5;
+    color: white;
+    padding: 3% 9%;
+    border: 2px solid #69ACA5;
     border-radius: 5px;
+}
+
+a:hover {
+    background: #222222;
+    color: #69ACA5;
 }
