--- a/genericusers/templates/signup.html
+++ b/genericusers/templates/signup.html
@@ -1,9 +1,18 @@
 {% extends "base.html" %}
 
+{% block head %}
+
+    {% load staticfiles %}
+    <link rel="stylesheet" type="text/css" href="{% static "genericusers/signup.css" %}">
+
+{% endblock %}
+
 {% block content %}
 
+    <div id='signup_message'>
+        <h1>Registrar usuario</h1>
+    </div>
     <div id='signup_signup'>
-        <h2>Registrar usuario</h2>
         <form method='post'>
             {% csrf_token %}
             <label for='username'>Usuario</label>
