--- a/solicitudes/templates/active_solicitudes.html
+++ b/solicitudes/templates/active_solicitudes.html
@@ -1,12 +1,24 @@
 {% extends "base.html" %}
 
+{% block head %}
+
+    {% load staticfiles %}
+    <link rel="stylesheet" type="text/css" href="{% static "solicitudes/active_solicitudes.css" %}">
+
+{% endblock %}
+
 {% block content %}
 
+    <div id='active_solicitudes_message'>
+        <h1>
+            Tus solicitudes
+        </h1>
+    </div>
     <div id='all_active_solicitudes'>
-        <h2>Tus solicitudes</h2>
         {% for s in solicitudes %}
+        <div class='active_solicitude'>
             <p>
-                Solicitud con PK_ID #: {{ s.pk_id }}
+                Solicitud #{{ s.pk_id }}
             </p>
             <p>
                 Tipo de operacion: {{ s.operation_type }}
@@ -23,7 +35,7 @@
             <p>
                 Esta activada: {{ s.is_active }}
             </p>
-            <hr>
+        </div>
         {% endfor %}
         <p>{{ message }}</p>
     </div>
