--- a/solicitudes/templates/passive_solicitudes.html
+++ b/solicitudes/templates/passive_solicitudes.html
@@ -1,11 +1,24 @@
 {% extends "base.html" %}
 
+{% block head %}
+
+    {% load staticfiles %}
+    <link rel="stylesheet" type="text/css" href="{% static "solicitudes/passive_solicitudes.css" %}">
+
+{% endblock %}
+
 {% block content %}
 
-    <div id='all_active_solicitudes'>
+    <div id='passive_solicitudes_message'>
+        <h1>
+            Solicitudes a negociar
+        </h1>
+    </div>
+    <div id='all_passive_solicitudes'>
         {% for s in solicitudes %}
+        <div class='passive_solicitude'>
             <p>
-                Solicitud con PK_ID #: {{ s.pk_id }}
+                Solicitud #{{ s.pk_id }}
             </p>
             <p>
                 Tipo de operacion: {{ s.operation_type }}
@@ -14,11 +27,12 @@
                 Valor: {{ s.val.name }}
             </p>
             <p>
-                Cantidad({{ s.quantity_type }}): {{ s.quantity }}
+                Cantidad: {{ s.quantity }} {{ s.quantity_type }}
             </p>
             <p>
                 Creado: {{ s.time_created }}
             </p>
+        </div>
         {% endfor %}
         <p>{{ message }}</p>
     </div>
