--- a/genericusers/templates/signup.html
+++ b/genericusers/templates/signup.html
@@ -29,7 +29,7 @@
             <br><br>
             <label for='user_type'>Tipo de usuario</label>
             <br>
-            <select name='quantity_type'>
+            <select name='user_type'>
                 <option value='1'>Activo</option>
                 <option value='2'>Intermediario</option>
             </select>
