--- a/solicitudes/templates/active_solicitudes.html
+++ b/solicitudes/templates/active_solicitudes.html
@@ -15,28 +15,35 @@
         </h1>
     </div>
     <div id='all_active_solicitudes'>
-        {% for s in solicitudes %}
-        <div class='active_solicitude'>
-            <p>
-                Solicitud #{{ s.pk_id }}
-            </p>
-            <p>
-                Tipo de operacion: {{ s.operation_type }}
-            </p>
-            <p>
-                Valor: {{ s.val.name }}, {{ s.val.offerant }}
-            </p>
-            <p>
-                Cantidad: {{ s.quantity }} {{ s.quantity_type }}
-            </p>
-            <p>
-                Creado: {{ s.time_created }}
-            </p>
-            <p>
-                Esta activada: {{ s.is_active }}
-            </p>
-        </div>
-        {% endfor %}
+        <form method='post'>
+            {% for s in solicitudes %}
+            <div class='active_solicitude'>
+                <p>
+                    Solicitud #{{ s.pk_id }}
+                </p>
+                <p>
+                    Tipo de operacion: {{ s.operation_type }}
+                </p>
+                <p>
+                    Valor: {{ s.val.name }}, {{ s.val.offerant }}
+                </p>
+                <p>
+                    Cantidad: {{ s.quantity }} {{ s.quantity_type }}
+                </p>
+                <p>
+                    Creado: {{ s.time_created }}
+                </p>
+                <p>
+                    Esta activada: {{ s.is_active }}
+                </p>
+                <p>
+                    <label for='{{ s.pk_id }}'>Seleccionar</label>
+                    <input type='checkbox' name='to_aprove' value='{{ s.pk_id }}'>
+                </p>
+            </div>
+            {% endfor %}
+            <input type='submit' value='Cancelar seleccionadas!'>
+        </form>
         <p>{{ message }}</p>
     </div>
     <div id='redirect_logout'>
