--- a/solicitudes/templates/passive_pending_solicitudes.html
+++ b/solicitudes/templates/passive_pending_solicitudes.html
@@ -21,7 +21,6 @@
         <div class='pending_solicitude'>
             <p>
                 Solicitud #{{ s.pk_id }}
-                <input type='checkbox' name='to_aprove' value='{{ s.pk_id }}'>
             </p>
             <p>
                 Tipo de operacion: {{ s.operation_type }}
@@ -35,10 +34,16 @@
             <p>
                 Creado: {{ s.time_created }}
             </p>
+            <p>
+                <label for='{{ s.pk_id }}'>Seleccionar</label>
+                <input type='checkbox' name='to_aprove' value='{{ s.pk_id }}'>
+            </p>
         </div>
         {% endfor %}
         {% if solicitudes %}
+        <div id='activate_button'>
             <input type='submit' value='Activar solicitudes!'>
+        </div>
         {% endif %}
         <p>{{ message }}</p>
         </form>
