--- a/solicitudes/templates/passive_solicitudes.html
+++ b/solicitudes/templates/passive_solicitudes.html
@@ -18,7 +18,7 @@
         {% for s in solicitudes %}
         <div class='passive_solicitude'>
             <p>
-                <a href={{ s.pk_id }}>Solicitud #{{ s.pk_id }}</a>
+                <a href={{ /solicitudes/s.pk_id/ }}>Solicitud #{{ s.pk_id }}</a>
             </p>
             <p>
                 Tipo de operacion: {{ s.operation_type }}
