--- a/vals/templates/search.html
+++ b/vals/templates/search.html
@@ -1,3 +1,80 @@
-{% for i in results %}
-	<p>{{ i.name }}</p>
-{% endfor %}
+{% extends "base.html" %}
+
+{% block head %}
+
+    {% load staticfiles %}
+    <link rel="stylesheet" type="text/css" href="{% static "vals/search.css" %}">
+
+{% endblock %}
+
+{% block content %}
+
+    <div id='search_message'>
+        <h1>Buscar valores</h1>
+    </div>
+    <div id='search_search'>
+        <form method='post'>
+            <label for='value_type'>Tipo de valor</label>
+            <br>
+            <select name='value_type'>
+                <option value='bono'>Bono</option>
+                <option value='accion'>Accion</option>
+            </select>
+            <br>
+            <label for='rent_type'>Tipo de renta</label>
+            <br>
+            <select name='rent_type'>
+                <option value='variable'>Variable</option>
+                <option value='fija'>Fija</option>
+            </select>
+            <br>
+            <label for='id_passive'>Login pasivo</label>
+            <br>
+            <select name='id_passive'>
+                {% for itm in passives %}
+                <option value='{{ itm.login }}'>{{ itm.login }}</option>
+                {% endfor %}
+            </select>
+            <br>
+            <label for='id_active'>Login activo</label>
+            <br>
+            <select name='id_active'>
+                {% for itm in actives %}
+                <option value='{{ itm.login }}'>{{ itm.login }}</option>
+                {% endfor %}
+            </select>
+            <br>
+            <label for='ordering_flag'>Ordenamiento por</label>
+            <br>
+            <select name='ordering_flag'>
+                {% for itm in ordering_parameters %}
+                <option value='{{ itm }}'>{{ itm }}</option>
+                {% endfor %}
+            </select>
+            <br>
+            <label for='active_solicitude'>Tiene solicitudes activas</label>
+            <br>
+            <select name='active_solicitude'>
+                <option value='1'>Si</option>
+                <option value='0'>No</option>
+            </select>
+            <br>
+            <label for='desc'>Tipo de ordenamiento</label>
+            <br>
+            <select name='desc'>
+                <option value='0'>Ascendente</option>
+                <option value='1'>Descendente</option>
+            </select>
+            <br><br>
+            <input type='submit' value='Buscar!'>
+        </form>
+    </div>
+    <div id='values_search'>
+        {% for itm in results %}
+        <div class='value_search'>
+            <p>{{ itm.name }}</p>
+        </div>
+        {% endfor %}
+    </div>
+
+{% endblock %}
