--- a/genericusers/templates/home.html
+++ b/genericusers/templates/home.html
@@ -1,37 +1,140 @@
-{% extends "base.html" %}
+<!DOCTYPE html>
+<html ng-app="home">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="../static/genericusers/css/home.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+</head>
+<body>
+    <div class="container-fluid">
+        <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+            <div class="container-fluid">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="/">Swap</a>
+                </div>
 
-{% block head %}
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="#">Link</a></li>
+                        <li><a href="#">Link</a></li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li><a href="#">Action</a></li>
+                                <li><a href="#">Another action</a></li>
+                                <li><a href="#">Something else here</a></li>
+                                <li class="divider"></li>
+                                <li><a href="#">Separated link</a></li>
+                                <li class="divider"></li>
+                                <li><a href="#">One more separated link</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <form class="navbar-form navbar-left" role="search">
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Search">
+                        </div>
+                        <button type="submit" class="btn btn-default">Submit</button>
+                    </form>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="#">Link</a></li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li><a href="#">Action</a></li>
+                                <li><a href="#">Another action</a></li>
+                                <li><a href="#">Something else here</a></li>
+                                <li class="divider"></li>
+                                <li><a href="#">Separated link</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div><!-- /.navbar-collapse -->
+            </div><!-- /.container-fluid -->
+        </nav>
 
-    {% load staticfiles %}
-    <link rel="stylesheet" type="text/css" href="{% static "genericusers/home.css" %}">
+        <div class="row">
+            <div class="banner" id="welcomeHome">
+                <h1>Zona de usuarios</h1>
+            </div>
+        </div>
 
-{% endblock %}
+        <div class="container">
+            <div><hr></div>
+        </div>
 
-{% block content %}
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div id="loginHome" class="form" ng-controller="LoginController as loginCtrl">
+                        <h2>Si ya estas registrado, inicia sesion ahora...</h2>
+                        <form name="loginForm" ng-submit="loginForm.$valid" novalidate>
+                            <div class="form-group">
+                                <label for="loginUser">Nombre de usuario</label>
+                                <input type="text" class="form-control" id="loginUser" placeholder="Nombre de usuario" maxlength="15" required ng-model="login.user">
+                            </div>
+                            <div class="form-group">
+                                <label for="loginPassword">Contrasena</label>
+                                <input type="password" class="form-control" id="loginPassword" placeholder="Contrasena" maxlength="15" required ng-model="login.password">
+                            </div>
+                            <button ng-disabled="!loginForm.$valid" class="btn btn-default">Ingresar ahora</button>
+                        </form>
+                    </div>
+                </div>
 
-    <div id='welcome_home'>
-        <h1>
-            Bienvenido a Swap!<br>
-            La bolsa de valores mas increible del mundo!
-        </h1>
+                <div class="col-md-6">
+                    <div id="signupHome" class="form" ng-controller="SignupController as signupCtrl">
+                        <h2>Si eres nuevo por aca, registrate ahora...</h2>
+                        <form name="signupForm" ng-submit="signupForm.$valid" novalidate>
+                            <div class="form-group">
+                                <label for="signupUser">Nombre de usuario</label>
+                                <input type="text" class="form-control" id="signupUser" placeholder="Nombre de usuario" maxlength="15" required ng-model="signup.user">
+                            </div>
+                            <div class="form-group">
+                                <label for="signupPassword">Contrasena</label>
+                                <input type="password" class="form-control" id="signupPassword" placeholder="Contrasena" maxlength="15" required ng-model="signup.password">
+                            </div>
+                            <div class="form-group">
+                                <label for="signupRepeatPassword">Repetir contrasena</label>
+                                <input type="password" class="form-control" id="signupRepeatPassword" placeholder="Repetir contrasena" maxlength="15" required ng-model="signup.repeatPassword">
+                            </div>
+                            <div class="form-group">
+                                <label for="signupUserType">Tipo de usuario</label>
+                                <select class="form-control" id="signupUserType" ng-init="signup.userType = '1'" ng-model="signup.userType">
+                                    <option value="1">Inversionista</option>
+                                    <option value="2">Oferente</option>
+                                    <option value="3">Intermediario</option>
+                                </select>
+                            </div>
+                            <div class="form-group" ng-show="signup.userType == '3'">
+                                <label for="signupRegister">Numero de registro</label>
+                                <input type="text" class="form-control" id="signupRegister" placeholder="Numero de registro" maxlength="25" ng-model="signup.register" ng-required="signup.userType == '3'">
+                            </div>
+                            <button ng-disabled="!signupForm.$valid" class="btn btn-default">Registrar usuario</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div id="footerHome">
+                    <p>Copyright 2014, all rights reserved</p>
+                </div>
+            </div>
+        </div>
     </div>
-    <div id='login_home'>
-        <h2>
-            Si ya estas registrado, ingresa ahora haciendo click aqui...
-        </h2>
-        <br>
-        <a href='/users/login/'>
-            Ingresar ahora!
-        </a>
-    </div>
-    <div id='signup_home'>
-        <h2>
-            Si eres nuevo, que esperas, registrate ahora haciendo click aqui...
-        </h2>
-        <br>
-        <a href='/users/signup/'>
-            Registrate ahora!
-        </a>
-    </div>
-    
-{% endblock %}
+
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.4/angular.min.js"></script>
+    <script src="../static/genericusers/js/home.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+</body>
+</html>
