--- a/swappy/swap/util/templates/util/footer.html
+++ b/swappy/swap/util/templates/util/footer.html
@@ -1,1 +1,4 @@
-<h4>Copyright 2014, all rights reserved</h4>
+<h4>
+	<span class="glyphicon glyphicon-copyright-mark"></span>
+	Copyright 2014, all rights reserved
+</h4>
