--- a/swappy/swap/util/templates/util/nav.html
+++ b/swappy/swap/util/templates/util/nav.html
@@ -9,7 +9,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="/">
-                <span class="glyphicon glyphicon-home"></span>
+                <span class=" glyphicon glyphicon-th-large"></span>
                 Swap
             </a>
         </div>
