--- a/swappy/src/swap/home/templates/home/news.html
+++ b/swappy/src/swap/home/templates/home/news.html
@@ -1,1 +1,6 @@
+{{ verbatim }}
 <h3>Noticias</h3>
+<div ng-repeat="item in newsCtrl.results">
+	<a href="{{ item.url }}">{{ item.title }}</a>
+</div>
+{{ endverbatim }}
