--- a/swappy/src/swap/home/templates/home/home.html
+++ b/swappy/src/swap/home/templates/home/home.html
@@ -34,7 +34,7 @@
             </div>
             <div class="row">
                 <div class="col-md-6 block">
-                    <div id="news">
+                    <div id="news" ng-controller="NewsController as newsCtrl">
                         {% include "home/news.html" %}
                     </div>
                 </div>
